2003-08-18  Alfred M. Szmidt  <ams@kemisten.nu>

	* sysdeps/generic/bits/libc-lock.h (__libc_cleanup_pop): Redefine
	and use __libc_cleanup_region_end instead.

2003-08-25  Ulrich Drepper  <drepper@redhat.com>

	* elf/ldconfig.c (search_dir): Revert patch of 2003-7-21.

2003-08-22  Ulrich Drepper  <drepper@redhat.com>

	* io/fcntl.h (posix_fallocate): Change type of third parameter to
	off_t.
	(posix_fallocate64): Change type of third parameter to off64_t.
	* sysdeps/generic/posix_fallocate.c: Adjust for type change.
	* sysdeps/posix/posix_fallocate.c: Likewise.
	* sysdeps/generic/posix_fallocate64.c: Likewise.
	* sysdeps/posix/posix_fallocate64.c: Likewise.  Add compatibility
	code for 32-bit platforms.
	* sysdeps/unix/sysv/linux/i386/Versions: Add new version for
	posix_fallocate64.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/Versions: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/Versions: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/Versions: Likewise.

2003-08-19  Ulrich Drepper  <drepper@redhat.com>

	* string/bits/string2.h (__STRING2_COPY_TYPE): Add attribute to
	the type, not to name.

	* stdio-common/test-vfprintf.c (main): Don't write temporary file
	into source directory.

	* malloc/malloc.c (_int_free): Add cheap test for some invalid
	block sizes.

	* sysdeps/unix/sysv/linux/i386/posix_fadvise64.S: Fix typo in
	syscall name.

2003-08-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/shm_open.c (shm_open): Fold EISDIR error
	into EINVAL.

2003-08-18  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/ia64/dl-machine.h (elf_machine_rela): Use _dl_reloc_bad_type.
	(elf_machine_lazy_rel): Likewise.

2003-08-18  Art Haas  <ahaas@airmail.net>

	* malloc/malloc.h: Remove unneeded ';' where closing the C++
	extern block.

2003-08-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/dl-fptr.h (ELF_MACHINE_LOAD_ADDRESS): Support
	loading big binaries where @gprel(sym) cannot be handled in 'add'